# logistics-dispatch-clustering

./: .gitignore  LICENSE  README.md  pyproject.toml  run_lodo_cv_v4.py  run_step2_eda_analysis.py  run_step2_sequencing_v2.py  run_step2_sequencing_v3_vrptw.py  run_step2_sequencing_v4_ultra.py  run_step2_sequencing_v5_soft_multi_h3.py  test_h3_hierarchical_zone_tsp.py  test_independent_vehicle_sequencing.py  test_multi_level_h3_sequencing.py  test_two_step_pipeline.py  test_weight_constrained_grouping.py
docs/: 01_research.md  02_design.md  03_eda_report.md  04_results.md  05_audit.md  06_design_v2_master_route.md  07_audit_v2_master_route.md  08_audit_v3_zone_correction.md  09_audit_v4_h3_community.md  10_final_summary.md  11_amazon_vs_zhengdong.md  12_amazon_final_summary.md  13_lodo_cv_v4_evaluation_report.md  14_step2_route_sequencing_report.md  15_step2_eda_sd_gap_analysis.md
src/taihe_dc/: __init__.py  amazon_baseline.py  amazon_trained.py  amazon_transformer.py  eda.py  evaluator.py  final_results.py  hard_mode.py  human_simulator.py  methodology_dispatch.py  pd_corrected.py  pd_final.py  pd_trans.py  permission_denied.py  pipeline.py  ppm_adapted.py  ppm_full.py  ppm_mine.py  sop.py  split.py
src/taihe_dc/baselines/: bc_vehicle_id.py  community_final.py  community_louvain.py  community_with_capacity.py  hard_mode_runner.py  inverse_optimization.py  io_louvain_hybrid.py  pairwise_siamese.py
